# fw-fanctrl-rs

./: .gitignore  Cargo.toml  README.md  fw-fanctrl.service  plot_curves.py
examples/: example_plugin.c  simple_moving_average.cpp  weighted_moving_average.cpp
include/: PLUGINS.md  example_plugin.c  fw-fanctrl-rs.h
src/: common.rs  daemon.rs  fan_curve.rs  fans.rs  main.rs  plot.rs  temp.rs
src/fan_curve/: curve_lut_gen.rs  mod.rs  plugins.rs
src/fan_curve/curve_parsing/: mod.rs
