[package]
name = "fw-fanctrl-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
ctrlc = "3.5.2"
nix = { version = "0.31", features = ["ioctl", "fs"] }
xxhash-rust = { version = "0.8.15", features = ["const_xxh3", "std", "xxh3"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
lto = "fat"

[profile.release.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
